--- a/index.html
+++ b/index.html
@@ -1,40 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-        <link rel="stylesheet" href="components/style.css">
 
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script> 
-    <!--bootstrap css-->
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet">
-    <!--icon-->
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
+  <link rel="stylesheet" href="css/custom.css">
 </head>
-<body>
-    <!--bootstrap cdn-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <header-component></header-component>
-    <main class="p-5" style="margin-top: 50px;">
-    <div class="p-3 pt-4">
-      <div class="bg-dark text-white rounded-top rounded-3" style="width: 28%;">
-        <img src="assets/products/p-3.jpg" class="img-fluid w-100 rounded-top" alt="">
-        <div class="p-3">
-          <p>Title</p>
-          <p>description</p>
-          <div class="w-100 d-flex justify-content-end">
-            <button class="btn btn-primary">view</button>
-          </div>
+
+<body class="d-flex flex-column min-vh-100">
+  <header-component></header-component>
+  <main class="flex-grow-1" style="margin-top: 50px;">
+    <section class="home-banner d-flex align-items-center">
+      <div class="container text-center text-white">
+        <h1 class="fw-bold">Welcome to Our Pet Store 🐾</h1>
+        <p class="lead">Cute pets, fun toys, and everything your pet loves</p>
+        <a href="/shop.html" class="btn btn-primary text-card btn-lg mt-3">
+          Shop Now
+        </a>
+      </div>
+    </section>
+    <section class="text-center">
+      <div class="container text-center">
+        <a href="#pet-section" class="btn btn-primary text-card btn-lg mt-3">
+          Pets
+        </a>
+        <a href="#toy-section" class="btn btn-primary text-card btn-lg mt-3">
+          Accessories
+        </a>
+        <a href="#food-section" class="btn btn-primary text-card btn-lg mt-3">
+          Food
+        </a>
+      </div>
+    </section>
+    <section>
+      <div id="pet-section" class="container mt-2">
+        <p class="h3 mb-4 text-brand">Pets</p>
+        <div id="dog" class="row"></div>
+      </div>
+      <div id="toy-section" class="container mt-2">
+        <p class="h3 mb-4 text-brand">Accessories</p>
+        <div id="product" class="row"></div>
+      </div>
+
+      <div id="food-section" class="container mt-2">
+        <p class="h3 mb-4 text-brand">foods</p>
+        <div id="food" class="row"></div>
+      </div>
+    </section>
+    
+  </main>
+  <script src="js/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <footer-component></footer-component>
+  <div class="modal fade" id="cartModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <h5 class="modal-title">Shopping Cart</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <div class="modal-body">
+          <p class="text-center text-muted d-none" id="emptyCartMsg">
+            Your cart is empty
+          </p>
+          <ul class="list-group" id="cartItems"></ul>
+        </div>
+
+
+        <div class="modal-footer">
+          <strong>Total: <span id="cartTotal">$0</span></strong>
+          <button class="btn btn-primary text-card ms-auto" id="purchaseBtn">
+            Purchase
+          </button>
         </div>
       </div>
     </div>
-  </main>
-    <!-- <footer-component></footer-component> -->
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/cart.js"></script>
+  <script src="components/header.js" type="text/javascript" defer></script>
+  <script src="components/footer.js" type="text/javascript" defer></script>
 </body>
+
 </html>
