--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,7 @@
     <main class="flex-grow-1 overflow-auto pt-4 pt-5 mt-5">
         <div
             class="container">
-            <h2 class="text-primary mb-3 text-center text-md-start">Welcome to Pet Store! 🐾</h2>
+            <h2 class="text-primary mb-3 text-center text-md-start welcome">Welcome to Pet Store! 🐾</h2>
             <p class="fs-6 fs-md-5">At Woof store, we are passionate about pets and the joy they bring to our lives. Founded with
                 the mission to provide high-quality products and services for pets of all shapes and sizes, our store is
                 a haven for pet lovers.
@@ -30,14 +30,14 @@
                 Beyond products, we are committed to creating a community for pet owners—sharing tips, care guides, and
                 supporting local animal welfare initiatives. Every pet deserves love, care, and the best products, and
                 that's exactly what we strive to deliver every day.</p>
-            <h4 class="text-primary mt-4">Our promise:</h4>
+            <h4 class="text-primary mt-4 welcome">Our promise:</h4>
             <ul class="ps-3 ps-md-4">
                 <li>Quality products for all types of pets</li>
                 <li>Expert advice and friendly service</li>
                 <li>A caring community for pet owners</li>
             </ul>
             <p
-                class="mt-3">Come visit us and see why pets love <span class="text-primary h5">Pet store 🐾</span> — and why their owners do too!</p>
+                class="mt-3">Come visit us and see why pets love <span class="text-primary h5 welcome">Pet store 🐾</span> — and why their owners do too!</p>
         </div>
     </main>
     <footer-component></footer-component>
