--- a/contact.html
+++ b/contact.html
@@ -6,26 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
 </head>
 
 <body>
     <header-component></header-component>
     <section class="contact-page py-5 h-full">
         <div class="container-fluid mt-5">
-            <h2 class="text-center text-card mb-5">
+            <h2 class="text-center text-primary contact-us mb-5 ">
                 Contact Us
                 <span class="title-line"></span>
             </h2>
 
             <div class="row g-4 align-items-stretch">
                 <div class="col-lg-5">
+                    <div class="contact-image h-100"></div>
+                </div>
+
+                <div class="col-lg-7">
                     <div class="contact-card h-100">
                         <h3 class="mb-4 text-card">Get In Touch</h3>
 
-                        <ul class="contact-info list-unstyled">
+                        <ul class="contact-info list-unstyled mb-4">
                             <li>
                                 <i class="fa-solid fa-location-dot"></i>
                                 <span>123 Main Street, Phnom Penh</span>
@@ -47,10 +51,7 @@
                                 <span>@petstore</span>
                             </li>
                         </ul>
-                    </div>
-                </div>
-                <div class="col-lg-7">
-                    <div class="contact-card h-100">
+
                         <form>
                             <div class="mb-3">
                                 <input type="text" class="form-control contact-input" placeholder="Your Name">
@@ -61,18 +62,16 @@
                             </div>
 
                             <div class="mb-4">
-                                <textarea rows="5" class="form-control contact-input"
+                                <textarea rows="4" class="form-control contact-input"
                                     placeholder="Your Message"></textarea>
                             </div>
 
-                            <button type="submit" class="btn btn-light text-primary px-4 rounded-pill">
+                            <button type="submit" class="btn btn-primary text-card px-4 rounded-pill">
                                 Send Message
                             </button>
-
                         </form>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
