complete index.html

--- a/about-us.html
+++ b/about-us.html
@@ -19,7 +19,7 @@
         <div
             class="container">
             <h2 class="text-primary mb-3 text-center text-md-start welcome">Welcome to Pet Store! 🐾</h2>
-            <p class="fs-6 fs-md-5">At Woof store, we are passionate about pets and the joy they bring to our lives. Founded with
+            <p class="fs-6 fs-md-5">At Pet store, we are passionate about pets and the joy they bring to our lives. Founded with
                 the mission to provide high-quality products and services for pets of all shapes and sizes, our store is
                 a haven for pet lovers.
 
