--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Pet Store | Quality Pet Food, Toys & Accessories</title>
+
+  <meta name="description"
+    content="Shop premium pet food, fun toys, grooming supplies, and accessories for dogs, cats, and more at Happy Paws Pet Store. Quality products, affordable prices, and fast delivery.">
+  <meta name="keywords"
+    content="pet store, online pet shop, pet food, dog food, cat food, pet toys, pet accessories, grooming supplies, puppy food, kitten food, pet shop Cambodia, buy pet supplies online, affordable pet products">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
@@ -18,7 +23,7 @@
       <div class="container text-center text-white">
         <h1 class="fw-bold welcome">Welcome to Our Pet Store 🐾</h1>
         <p class="lead">Cute pets, fun toys, and everything your pet loves</p>
-        <a href="/shop.html" class="btn btn-primary text-card btn-lg mt-3">
+        <a href="shop.html" class="btn btn-primary text-card btn-lg mt-3">
           Shop Now
         </a>
       </div>
@@ -51,10 +56,8 @@
         <div id="food" class="row"></div>
       </div>
     </section>
-    
+
   </main>
-  <script src="js/index.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <footer-component></footer-component>
   <div class="modal fade" id="cartModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -78,6 +81,7 @@
       </div>
     </div>
   </div>
+  <script src="js/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/cart.js"></script>
   <script src="components/header.js" type="text/javascript" defer></script>
