--- a/about-us.html
+++ b/about-us.html
@@ -4,22 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>About Us | Happy Paws Pet Store – Caring for Pets with Quality Products</title>
+
+    <meta name="description"
+        content="Learn more about our Pet Store, our mission, values, and passion for providing high-quality pet food, toys, and accessories for happy and healthy pets.">
+
+    <meta name="keywords"
+        content="about Pet Store, pet shop story, trusted pet store, pet care experts, pet store Cambodia, quality pet products, pet food suppliers">
     <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/custom.css">
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="/css/custom.css">
 </head>
 
-<body
-    class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100">
     <header-component></header-component>
     <main class="flex-grow-1 overflow-auto pt-4 pt-5 mt-5">
-        <div
-            class="container">
+        <div class="container">
             <h2 class="text-primary mb-3 text-center text-md-start welcome">Welcome to Pet Store! 🐾</h2>
-            <p class="fs-6 fs-md-5">At Pet store, we are passionate about pets and the joy they bring to our lives. Founded with
+            <p class="fs-6 fs-md-5">At Pet store, we are passionate about pets and the joy they bring to our lives.
+                Founded with
                 the mission to provide high-quality products and services for pets of all shapes and sizes, our store is
                 a haven for pet lovers.
 
@@ -36,11 +39,14 @@
                 <li>Expert advice and friendly service</li>
                 <li>A caring community for pet owners</li>
             </ul>
-            <p
-                class="mt-3">Come visit us and see why pets love <span class="text-primary h5 welcome">Pet store 🐾</span> — and why their owners do too!</p>
+            <p class="mt-3">Come visit us and see why pets love <span class="text-primary h5 welcome">Pet store
+                    🐾</span> — and why their owners do too!</p>
         </div>
     </main>
     <footer-component></footer-component>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
 </body>
 
 </html>
