--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="/css/custom.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -81,8 +81,8 @@
       </div>
     </div>
   </div>
-  <script src="js/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/index.js"></script>
   <script src="js/cart.js"></script>
   <script src="components/header.js" type="text/javascript" defer></script>
   <script src="components/footer.js" type="text/javascript" defer></script>
