--- a/shop.html
+++ b/shop.html
@@ -2,48 +2,64 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
-    <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/custom.css">
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shop Pet Supplies Online | Pet Food, Toys & Accessories – Happy Paws</title>
+
+  <meta name="description"
+    content="Shop premium pet food, toys, grooming supplies, and accessories for dogs and cats at Happy Paws Pet Store. Affordable prices and quality products for your pets.">
+  <meta name="keywords"
+    content="shop pet supplies, buy pet food online, dog food shop, cat food shop, pet toys, pet accessories, grooming products, puppy food, kitten food, pet store Cambodia, online pet shop">
+  <meta name="robots" content="index, follow">
+<link rel="canonical" href="https://yourdomain.com/shop.html">
+
+  <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/custom.css">
+  <script src="components/header.js" type="text/javascript" defer></script>
+  <script src="components/footer.js" type="text/javascript" defer></script>
 </head>
 
-<body
-    class="d-flex flex-column min-vh-100">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/cart.js"></script>
-    <header-component></header-component>
-    <main class="flex-grow-1 overflow-auto pt-4 pt-5 mt-5" style="margin-top: 5%;">
-        <div class="">
-            <div id="dog-pug-section" class="container mt-2">
-                <p class="h3 mb-4 text-brand">Pugs</p>
-                <div id="pug" class="row"></div>
-            </div>
-            <div id="pom-section" class="container mt-2">
-                <p class="h3 mb-4 text-brand">Pomskey</p>
-                <div id="pom" class="row"></div>
-            </div>
-            <div id="schno-section" class="container mt-2">
-                <p class="h3 mb-4 text-brand">Schnoodle</p>
-                <div id="schno" class="row"></div>
-            </div>
-            <div id="toy-section" class="container mt-2">
-                <p class="h3 mb-4 text-brand">Accessories</p>
-                <div id="toy" class="row"></div>
-            </div>
- 
-        </div>
-    </main>
-    <script src="js/shop.js"></script>
+<body class="d-flex flex-column min-vh-100">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/cart.js"></script>
+  <header-component></header-component>
+  <main class="flex-grow-1 overflow-auto pt-4 pt-5 mt-5" style="margin-top: 5%;">
+    <div id="dog-pug-section" class="container mt-2">
+      <p class="h3 mb-4 text-brand">Pugs</p>
+      <div id="pug" class="row"></div>
+    </div>
+    <div id="pom-section" class="container mt-2">
+      <p class="h3 mb-4 text-brand">Pomskey</p>
+      <div id="pom" class="row"></div>
+    </div>
+    <div id="schno-section" class="container mt-2">
+      <p class="h3 mb-4 text-brand">Schnoodle</p>
+      <div id="schno" class="row"></div>
+    </div>
+    <div class="container mt-2">
+      <p class="h3 mb-4 text-brand">Ragedoll</p>
+      <div id="ragdoll" class="row"></div>
+    </div>
+    <div class="container mt-2">
+      <p class="h3 mb-4 text-brand">Japanese Bobtail</p>
+      <div id="japanese" class="row"></div>
+    </div>
+    <div class="container mt-2">
+      <p class="h3 mb-4 text-brand">Americants Curl</p>
+      <div id="americant" class="row"></div>
+    </div>
+    <div id="toy-section" class="container mt-2">
+      <p class="h3 mb-4 text-brand">Accessories</p>
+      <div id="toy" class="row"></div>
+    </div>
+  </main>
+  <script src="js/shop.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <footer-component></footer-component>
-    <div class="modal fade" id="cartModal" tabindex="-1">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <footer-component></footer-component>
+  <div class="modal fade" id="cartModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
 
