--- a/about-us.html
+++ b/about-us.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Happy Paws Pet Store – Caring for Pets with Quality Products</title>
-
+    <title>About Us | Happy Paws Pet Store - Caring for Pets with Quality Products</title>
     <meta name="description"
         content="Learn more about our Pet Store, our mission, values, and passion for providing high-quality pet food, toys, and accessories for happy and healthy pets.">
-
     <meta name="keywords"
         content="about Pet Store, pet shop story, trusted pet store, pet care experts, pet store Cambodia, quality pet products, pet food suppliers">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Happy Paws Pet Store">
+
     <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/custom.css">
@@ -48,5 +48,4 @@
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
 </body>
-
 </html>
