create accessories page

--- a/food.html
+++ b/food.html
@@ -19,7 +19,7 @@
     <header-component></header-component>
     <main class="pt-5">
         <section class="food-hero text-center py-5">
-            <h1 class="fw-bold text-primary">Premium Pet Food</h1>
+            <h1 class="fw-bold text-primary contact-us">Premium Pet Food</h1>
             <p class="text-muted">
                 Carefully selected nutrition to support your pet's health, energy, and happiness.
             </p>
