--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
             <div class="modal-content">
 
                 <div class="modal-header">
-                    <h5 class="modal-title">Shopping Cart</h5>
+                    <h5 class="modal-title text-primary">Shopping Cart</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
 
