--- a/shop.html
+++ b/shop.html
@@ -11,8 +11,7 @@
   <meta name="keywords"
     content="shop pet supplies, buy pet food online, dog food shop, cat food shop, pet toys, pet accessories, grooming products, puppy food, kitten food, pet store Cambodia, online pet shop">
   <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://yourdomain.com/shop.html">
-
+  <link rel="canonical" href="https://yourdomain.com/shop.html">
   <link rel="icon" href="assets/pet-logo.jpg" type="image/jpeg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/custom.css">
@@ -20,20 +19,26 @@
   <script src="components/footer.js" type="text/javascript" defer></script>
 </head>
 
-<body class="d-flex flex-column min-vh-100">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/cart.js"></script>
+<body class="pt-5 min-vh-100">
   <header-component></header-component>
-  <main class="flex-grow-1 overflow-auto pt-4 pt-5 mt-5" style="margin-top: 5%;">
-    <div id="dog-pug-section" class="container mt-2">
+  <main class="py-5 container">
+    <h1 class="mb-3 text-primary contact-us text-center">Shop everything related to pet you want</h1>
+            <span class="title-line"></span>
+    <p class="text-muted mx-auto">
+  Discover a wide range of high-quality pet products designed to keep your dogs and cats happy and healthy.
+  From nutritious pet food to fun toys and everyday accessories, our shop offers carefully selected items
+  that combine quality, comfort, and affordability for every pet owner.
+</p>
+
+    <div class="container mt-2">
       <p class="h3 mb-4 text-brand">Pugs</p>
       <div id="pug" class="row"></div>
     </div>
-    <div id="pom-section" class="container mt-2">
+    <div class="container mt-2">
       <p class="h3 mb-4 text-brand">Pomskey</p>
       <div id="pom" class="row"></div>
     </div>
-    <div id="schno-section" class="container mt-2">
+    <div class="container mt-2">
       <p class="h3 mb-4 text-brand">Schnoodle</p>
       <div id="schno" class="row"></div>
     </div>
@@ -49,45 +54,36 @@
       <p class="h3 mb-4 text-brand">Americants Curl</p>
       <div id="americant" class="row"></div>
     </div>
-    <div id="toy-section" class="container mt-2">
+    <div class="container mt-2">
       <p class="h3 mb-4 text-brand">Accessories</p>
       <div id="toy" class="row"></div>
     </div>
   </main>
-  <script src="js/shop.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/cart.js"></script>
+  <script src="js/shop.js"></script>
   <footer-component></footer-component>
   <div class="modal fade" id="cartModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
-
         <div class="modal-header">
           <h5 class="modal-title">Shopping Cart</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
-
         <div class="modal-body">
           <p class="text-center text-muted d-none" id="emptyCartMsg">
             Your cart is empty
           </p>
           <ul class="list-group" id="cartItems"></ul>
         </div>
-
-
         <div class="modal-footer">
           <strong>Total: <span id="cartTotal">$0</span></strong>
           <button class="btn btn-primary text-card ms-auto" id="purchaseBtn">
             Purchase
           </button>
         </div>
-
-
-
       </div>
     </div>
   </div>
 </body>
-
 </html>
