--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Shopping Cart</h5>
+          <h5 class="modal-title text-primary">Shopping Cart</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
