--- a/shop.html
+++ b/shop.html
@@ -22,13 +22,13 @@
 <body class="pt-5 min-vh-100">
   <header-component></header-component>
   <main class="py-5 container">
-    <h1 class="mb-3 text-primary contact-us text-center">Shop everything related to pet you want</h1>
-            <span class="title-line"></span>
+    <h1 class="mb-3 text-primary contact-us text-center">Enjoy buying something you want</h1>
+    <span class="title-line"></span>
     <p class="text-muted mx-auto">
-  Discover a wide range of high-quality pet products designed to keep your dogs and cats happy and healthy.
-  From nutritious pet food to fun toys and everyday accessories, our shop offers carefully selected items
-  that combine quality, comfort, and affordability for every pet owner.
-</p>
+      Discover a wide range of high-quality pet products designed to keep your dogs and cats happy and healthy.
+      From nutritious pet food to fun toys and everyday accessories, our shop offers carefully selected items
+      that combine quality, comfort, and affordability for every pet owner.
+    </p>
 
     <div class="container mt-2">
       <p class="h3 mb-4 text-brand">Pugs</p>
@@ -55,8 +55,12 @@
       <div id="americant" class="row"></div>
     </div>
     <div class="container mt-2">
-      <p class="h3 mb-4 text-brand">Accessories</p>
-      <div id="toy" class="row"></div>
+      <div class="d-flex justify-content-between align-items-center mb-4">
+        <p class="h3 mb-0 text-brand">Accessories</p>
+        <a href="accessories.html" class="btn btn-primary">See more</a>
+      </div>
+      <div id="toy" class="row">
+      </div>
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -67,7 +71,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Shopping Cart</h5>
+          <h5 class="modal-title text-primary">Shopping Cart</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
@@ -86,4 +90,5 @@
     </div>
   </div>
 </body>
+
 </html>
