--- a/shop.html
+++ b/shop.html
@@ -56,8 +56,15 @@
     </div>
     <div class="container mt-2">
       <div class="d-flex justify-content-between align-items-center mb-4">
+        <p class="h3 mb-0 text-brand">Foods</p>
+        <a href="food.html" class="btn btn-outline-primary text-brand rounded-pill">See more</a>
+      </div>
+      <div id="food" class="row">
+      </div>
+    <div class="container mt-2">
+      <div class="d-flex justify-content-between align-items-center mb-4">
         <p class="h3 mb-0 text-brand">Accessories</p>
-        <a href="accessories.html" class="btn btn-primary">See more</a>
+        <a href="accessories.html" class="btn btn-outline-primary text-brand rounded-pill">See more</a>
       </div>
       <div id="toy" class="row">
       </div>
