update: shop page

--- a/shop.html
+++ b/shop.html
@@ -35,7 +35,7 @@
       <div id="pug" class="row"></div>
     </div>
     <div class="container mt-2">
-      <p class="h3 mb-4 text-brand">Pomskey</p>
+      <p class="h3 mb-4 text-brand">Pomsky</p>
       <div id="pom" class="row"></div>
     </div>
     <div class="container mt-2">
@@ -43,7 +43,7 @@
       <div id="schno" class="row"></div>
     </div>
     <div class="container mt-2">
-      <p class="h3 mb-4 text-brand">Ragedoll</p>
+      <p class="h3 mb-4 text-brand">Ragdoll</p>
       <div id="ragdoll" class="row"></div>
     </div>
     <div class="container mt-2">
@@ -51,7 +51,7 @@
       <div id="japanese" class="row"></div>
     </div>
     <div class="container mt-2">
-      <p class="h3 mb-4 text-brand">Americants Curl</p>
+      <p class="h3 mb-4 text-brand">American Curl</p>
       <div id="americant" class="row"></div>
     </div>
     <div class="container mt-2">
