--- a/index.html
+++ b/index.html
@@ -47,14 +47,21 @@
         <div id="dog" class="row"></div>
       </div>
       <div id="toy-section" class="container mt-2">
-        <p class="h3 mb-4 text-brand">Accessories</p>
-        <div id="product" class="row"></div>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <p class="h3 mb-0 text-brand">Accessories</p>
+          <a href="accessories.html" class="btn btn-outline-primary text-brand rounded-pill">See more</a>
+        </div>
+        <div id="product" class="row">
+        </div>
       </div>
 
       <div id="food-section" class="container mt-2">
-        <p class="h3 mb-4 text-brand">foods</p>
-        <div id="food" class="row"></div>
-      </div>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <p class="h3 mb-0 text-brand">Foods</p>
+          <a href="food.html" class="btn btn-outline-primary text-brand rounded-pill">See more</a>
+        </div>
+        <div id="food" class="row">
+        </div>
     </section>
 
   </main>
