--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact Pet Store in Phnom Penh | Customer Support</title>
+    <meta name="description" content="Contact Pet Store for product inquiries, orders, and customer support. Call, email, or visit our store today.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="css/custom.css">
@@ -36,7 +37,7 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
-                                <span>petstore@email.com</span>
+                                <span>petstore@gmail.com</span>
                             </li>
                             <li>
                                 <i class="fa-solid fa-phone"></i>
